--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
-	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-web'	
+	
 	implementation 'org.bgee.log4jdbc-log4j2:log4jdbc-log4j2-jdbc4.1:1.16'
 		
 	// https://mvnrepository.com/artifact/commons-io/commons-io
@@ -48,6 +49,8 @@ dependencies {
 	
 	implementation 'org.apache.tomcat.embed:tomcat-embed-jasper:9.0.60'
 	implementation 'javax.servlet:jstl:1.2'
+	
+	implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1'
 	
 	//db
 	runtimeOnly 'mysql:mysql-connector-java'
