검색 기능 삭제

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 logging.level.root=info
 
+server.servlet.session.timeout=60
+
 spring.datasource.url=jdbc:log4jdbc:mysql://localhost:3306/test?serverTimezone=UTC&useUnicode=true&characterEncoding=utf8&useSSL=false&allowPublicKeyRetrieval=true
 
 spring.datasource.username=gamsung
