--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,6 @@ logging.level.root=info
 server.servlet.session.timeout=600
 
 spring.datasource.url=jdbc:log4jdbc:mysql://localhost:3306/test?serverTimezone=UTC&useUnicode=true&characterEncoding=utf8&useSSL=false&allowPublicKeyRetrieval=true
-
 spring.datasource.username=gamsung
 spring.datasource.password=1234
 spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
@@ -13,7 +12,7 @@ mybatis.configuration.map-underscore-to-camel-case=true
 
 #mybatis
 mybatis.mapper-locations=classpath:mybatis/mapper/**/**.xml
-#xml파일 result type에 패키지명을 생략할수있도록 alias 설정
+#xml파일 result type에 패키지명을 생략할수있도록 alias 설정
 mybatis.type-aliases-package=com.test.dev
 
 spring.mvc.view.prefix=/WEB-INF/views/
@@ -22,6 +21,7 @@ spring.mvc.view.suffix=.jsp
 spring.servlet.multipart.max-file-size = 10MB
 #mutipart/form-data의 request가 사이즈 설정크기를 못넘음
 spring.servlet.multipart.max-request-size = 10MB
+
 spring.servlet.multipart.location = C:/dev/files
 
 spring.mvc.static-path-pattern="/static/**"
@@ -32,7 +32,6 @@ spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.web.servlet.
 #devtools.livereload.enabled=true
 spring.devtools.restart.enabled = true
 spring.freemarker.cache=false
-spring.thymeleaf.cache=false
 
 # Deploy profile ( prod, stage, dev, local )
 spring.profiles.active=local
